# 3.16.0 (2024-XX-XX)

 * Deprecate not passing a `Source` instance to `TokenStream`
 * Deprecate returning `null` from `TwigFilter::getSafe()` and `TwigFunction::getSafe()`, return `[]` instead

# 3.15.0 (2024-11-17)
 
 * [BC BREAK] Add support for accessing class constants with the dot operator;
   this can be a BC break if you don't use UPPERCASE constant names
 * Add Spanish inflector support for the `plural` and `singular` filters in the String extension
 * Deprecate `TempNameExpression` in favor of `LocalVariable`
 * Deprecate `NameExpression` in favor of `ContextVariable`
 * Deprecate `AssignNameExpression` in favor of `AssignContextVariable`
 * Remove `MacroAutoImportNodeVisitor`
 * Deprecate `MethodCallExpression` in favor of `MacroReferenceExpression`
 * Fix support for the "is defined" test on `_self.xxx` (auto-imported) macros
 * Fix support for the "is defined" test on inherited macros
 * Add named arguments support for the dot operator arguments (`foo.bar(some: arg)`)
 * Add named arguments support for macros
 * Add a new `guard` tag that allows to test if some Twig callables are available at compilation time
 * Allow arrow functions everywhere
 * Deprecate passing a string or an array to Twig callable arguments accepting arrow functions (pass a `\Closure`)
 * Add support for triggering deprecations for future operator precedence changes
 * Deprecate using the `not` unary operator in an expression with ``*``, ``/``, ``//``, or ``%`` without using explicit parentheses to clarify precedence
 * Deprecate using the `??` binary operator without explicit parentheses
 * Deprecate using the `~` binary operator in an expression with `+` or `-` without using parentheses to clarify precedence
 * Deprecate not passing `AbstractExpression` args to most constructor arguments for classes extending `AbstractExpression`
 * Fix `power` expressions with a negative number in parenthesis (`(-1) ** 2`)